# coding_Ai_qwen

./: .env.example  .gitignore  .rules  AGENTS.md  README.md  quality-gates.json
.github/: copilot-instructions.md
.github/agents/: Frontend Polisher.agent.md  Senior Delivery.agent.md  Senior Implementer.agent.md  Senior Planner.agent.md  Senior Reviewer.agent.md
.github/hooks/: session-context.json
.github/instructions/: frontend.instructions.md  testing.instructions.md
.github/prompts/: frontend-polish.prompt.md  test-repair-loop.prompt.md
.zed/: settings.json
apps/agent-server/: README.md  pyproject.toml
apps/agent-server/src/local_coding_agent/: __init__.py  __main__.py  config.py  quality_gates.py  server.py  vscode_hooks.py
apps/agent-server/src/local_coding_agent/tools/: __init__.py  command_runner.py  scaffolding.py  workspace.py
apps/agent-server/tests/: test_config.py  test_quality_gates.py  test_scaffolding.py  test_server_metadata.py  test_vscode_hooks.py  test_workspace.py
apps/vscode-extension/: README.md
crud/: index.js
crud/routes/: index.js
crud/views/: form.ejs  index.ejs
docs/: agent-behavior.md  clean-architecture.md  editor-setup.md  frontend-standards.md  quality-gates.md  vision-workflow.md
scripts/: bootstrap_workspace.sh  install_global_agent.sh  new_desktop_workspace.sh  quality_gate_runner.py  run_agent_server.sh  run_llamacpp_server.sh  run_quality_gates.sh  run_vision_server.sh  run_vision_smoke_test.sh  run_vscode_hook.sh  setup_popos.sh  setup_vision_stack.sh  vision_smoke_test.py  vscode_hook.py
(+31 files in other folders)
