[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "local-coding-agent"
version = "0.1.0"
description = "Repo-aware MCP server for local coding workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.20.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0"
]

[project.scripts]
local-coding-agent = "local_coding_agent.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
